<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGray1">

    <FrameLayout
        android:id="@+id/id_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"></FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <TextView
            android:id="@+id/tab_menu_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="5dp"
            android:drawableTop="@drawable/icon_home"
            android:textColor="@color/selector_item_primary_color"
            android:text="@string/title_home"
            android:textSize="12sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tab_menu_resumption"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="5dp"
            android:drawableTop="@drawable/icon_resumption"
            android:textColor="@color/selector_item_primary_color"
            android:text="@string/title_resumption"
            android:textSize="12sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tab_menu_addressbook"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="5dp"
            android:drawableTop="@drawable/icon_addressbook"
            android:textColor="@color/selector_item_primary_color"
            android:text="@string/title_addressbook"
            android:textSize="12sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tab_menu_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="5dp"
            android:drawableTop="@drawable/icon_mine"
            android:textColor="@color/selector_item_primary_color"
            android:text="@string/title_mine"
            android:textSize="12sp"
            android:gravity="center" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>