<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lf.ninghaisystem.activities.LoginActivity"
    android:background="@mipmap/login_bj"
    android:focusable="true"
    android:focusableInTouchMode="true">
    
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/title_height"
        android:text="@string/login_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#fcf4b4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3265625"/>
    
    <EditText
        android:id="@+id/edit_account"
        android:layout_width="@dimen/edit_txt_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/draw_white"
        android:layout_marginTop="34dp"
        android:padding="5dp"
        android:drawableLeft="@mipmap/login_name"
        android:drawablePadding="5dp"
        android:inputType="phone"
        android:hint="@string/hint_account"
        android:textColorHint="#cccccc"
        android:textSize="14sp"
        android:textColor="#666666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="@dimen/edit_txt_width"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/draw_white"
        android:layout_marginTop="14dp"
        android:padding="5dp"
        android:drawableLeft="@mipmap/login_password"
        android:drawablePadding="5dp"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:textColorHint="#cccccc"
        android:textSize="14sp"
        android:textColor="#666666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_account" />
    
    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/title_height"
        android:background="@drawable/draw_login"
        android:text="登  录"
        android:textSize="17sp"
        android:textColor="@color/colorTitleRed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        />
    
    <TextView
        android:id="@+id/txt_forget"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="忘记密码"
        android:textSize="13sp"
        android:textColor="#de9598"
        android:layout_marginTop="15dp"
        app:layout_constraintRight_toRightOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"/>

</android.support.constraint.ConstraintLayout>
